[project]
name = "mjc"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sly==0.5",
    "flake8==7.1.1",
    "pytest==8.3.2",
    "graphviz==0.20.3",
    "pytest-timeout==2.3.1",
    "timeout-decorator==0.5.0",
    "rich==14.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "isort==5.13.2",
]

[project.scripts]
mj-lexer = "mjc.mj_lexer:main"
mj-parser = "mjc.mj_parser:main"
mj-sema = "mjc.mj_sema:main"
mj-code = "mjc.mj_code:main"
mj-analysis = "mjc.mj_analysis:main"
mjc = "mjc.mj_compiler:main"

[tool.isort]
profile = "black"
line_length = 79